add buttons & some css

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 @import url(./fonts.css);
 @import url(./partials/_variables.css);
+@import url(./partials/_global.css);
 
 .header_area.main-menu.navbar.navbar-brand{
    padding: 0 2rem 0 5rem;
@@ -27,4 +28,54 @@
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    background-clip: text;   
+}
+
+.site-main .site-banner{
+   background: url(../img/banner/home-banner.png)no-repeat 0% 50%;
+}
+
+.site-main .site-banner .site-title h3{
+   padding-top: 35%;
+   font-weight: 500;
+}
+
+.site-main .site-banner .site-banner h3::after{
+   content: "";
+   height: 2px;
+   width: 18vw;
+   background: black;
+   display: inline-block;
+   margin-left: 5%;
+   transform: translateY(-10px);
+}
+
+.site-main .site-banner .site-title h1{
+   font-size: 5rem;
+}
+
+.site-main .site-banner .site-title h4{
+   font-size: 1.5rem;
+}
+.site-main .site-banner .banner-image>img{
+   padding: 7rem 0;
+   width: 90rem;
+}
+
+.site-main .about-us{
+   padding: 8rem 5rem;
+}
+
+.site-main .about-area .about-title h2>span {
+   display: block;
+   font: normal bold 49px/60px var(--roboto);
+   letter-spacing: 21px;
+}
+
+.site-main .about-area .about-title .paragraph >p{
+   padding: .4rem 0;
+}
+
+p.para{
+   color: var(--text-color);
+   font: normal 500 16px/25px var(--roboto);
 }
